--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_ACTION_URL=https://api.themoviedb.org/3/discover/movie?api_key=fbbec1570b88
 VITE_DOCUMENTARY_URL=https://api.themoviedb.org/3/discover/movie?api_key=fbbec1570b882641b8f54f3d6766658c&with_genres=99
 VITE_HORROR_URL=https://api.themoviedb.org/3/discover/movie?api_key=fbbec1570b882641b8f54f3d6766658c&with_genres=27
 VITE_ROMANTIC_URL=https://api.themoviedb.org/3/discover/movie?api_key=fbbec1570b882641b8f54f3d6766658c&with_genres=10749
+VITE_IMAGE_URL = https://image.tmdb.org/t/p/original
