--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@material-tailwind/react": "^2.1.8",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.6.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
