--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@types/lodash": "^4.14.202",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-material-ui-carousel": "^3.4.2",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.3",
-    "recoil": "^0.7.7"
+    "react-slick": "^0.30.1",
+    "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
