--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY=fbbec1570b882641b8f54f3d6766658c
+API_KEY=
 
 VITE_COMEDY_URL=https://api.themoviedb.org/3/discover/movie?api_key=fbbec1570b882641b8f54f3d6766658c&with_genres=35
 VITE_ACTION_URL=https://api.themoviedb.org/3/discover/movie?api_key=fbbec1570b882641b8f54f3d6766658c&with_genres=28
